--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
     --clr-beasty-white: #eee;
     --clr-beasty-black: #151415;
 
-
+    
+    --clr-beasty-darkblue: #000b12;
+    --clr-beasty-red: #ff0000;
     --clr-beasty-lightorange: #f7cab8;
 
     --clr-civ-byz-emblem: #bcbc91;
@@ -20,6 +22,13 @@
     --clr-civ-zxl-bg: #258587;
     --clr-civ-jap-emblem: #c29b16;
     --clr-civ-jap-bg: #e4e5e5;
+
+    --fs-xs: 0.5em;
+    --fs-s: 0.8em;
+    --fs-m: 1em;
+    --fs-l: 1.5em;
+    --fs-xl: 2.5em;
+
 }
 
 * {
@@ -71,7 +80,7 @@ nav button {
 }
 
 nav button:hover, 
-nav a:hover,
+nav li a:hover,
 #headLogo:hover {
     color: #000;
     background-color: var(--clr-beasty-orange);
@@ -86,7 +95,7 @@ nav a:hover,
 /* Beasty Landing Page Content */
 
 main {
-    background-color: var(--clr-beasty-black);
+    background-color: var(--clr-beasty-lightgrey);
     padding: 2.5em 4em;
 }
 
@@ -107,7 +116,8 @@ main * {
 }
 
 .gridContent {
-    border-radius: 16px;
+    background-color: var(--clr-beasty-orange);
+    border-radius: 1em;
     box-shadow: 
     0 0 8px var(--clr-beasty-black),
     0 0 16px var(--clr-beasty-darkgrey),
@@ -138,7 +148,7 @@ main * {
 .civImages2 img,
 .beastyBanner img {
     width: 100%;
-    border-radius: 16px;
+    border-radius: 1em;
 }
 
 .beastyContent1,
@@ -164,18 +174,22 @@ main * {
 }
 
 
+
+
+
 /* SUB GOALS PAGE */
 
 /* GRID GOALS LISTS */
 
 .subGoalsSection {
     display: grid;
-    gap: 2em;
+    gap: 1em 2em;
     margin-bottom: 2em;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-areas: 
         "goals1 goals2"
+        "goals1 goals3"
         "goals1 amount";
 }
 
@@ -183,14 +197,33 @@ main * {
 
 .goals2 { grid-area: goals2;}
 
+.goals3 { grid-area: goals3;}
+
 .subAmounts { grid-area: amount;}
 
 
 .goalsList {
-    background-color: var(--clr-beasty-lightorange);
+    color: var(--clr-beasty-white);
+    background-color: var(--clr-beasty-darkblue);
     padding: 1em 2em;
     border-radius: 1em;
-    border: 2px solid var(--clr-beasty-orange);
+    border: 4px solid var(--clr-beasty-red);
+    box-shadow: 
+        0 0 8px var(--clr-beasty-black),
+        0 0 16px var(--clr-beasty-darkgrey),
+        0 0 24px var(--clr-beasty-black);
+}
+
+.goalsList h1 {
+    font-size: var(--fs-l);
+    margin-bottom: var(--fs-xs);
+    font-weight: bold;
+}
+
+.goalsList p {
+    font-size: var(--fs-s);
+    margin-left: 4em;
+    font-weight: bold;
 }
 
 
@@ -207,9 +240,9 @@ main * {
     display: block;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
+    margin-bottom: var(--fs-xs);
     cursor: pointer;
-    font-size: 0.8em;
+    font-size: var(--fs-s);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -230,8 +263,8 @@ main * {
     position: absolute;
     top: 0;
     left: 0;
-    height: 20px;
-    width: 20px;
+    width: var(--fs-m);
+    aspect-ratio: 1;
     background-color: #eee;
 }
 
@@ -259,8 +292,8 @@ main * {
 
 /* Style the checkmark/indicator */
 .checkContainer .checkmark:after {
-    left: 7px;
-    top: 3px;
+    left: 5px;
+    top: 1.5px;
     width: 3px;
     height: 8px;
     border: solid white;
